<resources>
    <string name="aar_save">保存</string>
    <string name="aar_paused">暂停</string>
    <string name="aar_recording">录音中</string>
    <string name="aar_playing">开始中</string>
    <string name="app_name">六度</string>
    <string name="born_date">born_date</string>
    <string name="doctoral_jie">doctoral_jie</string>
    <string name="doctoral_school">doctoral_school</string>
    <string name="high_jie">high_jie</string>
    <string name="high_school">high_school</string>
    <string name="ji_guan">ji_guan</string>
    <string name="jiu_du">jiu_du</string>
    <string name="middle_jie">middle_jie</string>
    <string name="middle_school">middle_school</string>
    <string name="mobile">mobile</string>
    <string name="nick_name">nick_name</string>
    <string name="post_graduate_jie">post_graduate_jie</string>
    <string name="post_graduate_school">post_graduate_school</string>
    <string name="real_name">real_name</string>
    <string name="small_jie">small_jie</string>
    <string name="small_school">small_school</string>
    <string name="under_graduate_jie">under_graduate_jie</string>
    <string name="under_graduate_school">under_graduate_school</string>
    <string name="work">work</string>
    <string name="work_current">work_current</string>
    <string name="work_ever">work_ever</string>
    <string name="you_er_yuan_jie">you_er_yuan_jie</string>
    <string name="you_er_yuan_school">you_er_yuan_school</string>
    <string name="zhu_zhi">zhu_zhi</string>

    <string name="contact_no_group">其他</string>
    <string name="keyword_hint">输入姓名或电话搜索</string>
    <string name="group_btn_text">分组</string>
    <string name="search_text">搜索</string>
    <string name="group_text">分组</string>
    <string name="search_hint">搜索关键字，姓名或电话</string>
    <string name="search_text_search">搜索</string>
    <string name="search_text_group">分组</string>
    <string name="search_open">搜索</string>
    <string name="select_all">全选</string>
    <string name="title_activity_settings">Settings</string>

    <string name="summary_born_date">born_date</string>
    <string name="summary_doctoral_jie">doctoral_jie</string>
    <string name="summary_doctoral_school">doctoral_school</string>
    <string name="summary_high_jie">high_jie</string>
    <string name="summary_high_school">high_school</string>
    <string name="summary_ji_guan">ji_guan</string>
    <string name="summary_jiu_du">jiu_du</string>
    <string name="summary_middle_jie">middle_jie</string>
    <string name="summary_middle_school">middle_school</string>
    <string name="summary_mobile">mobile</string>
    <string name="summary_nick_name">nick_name</string>
    <string name="summary_post_graduate_jie">post_graduate_jie</string>
    <string name="summary_post_graduate_school">post_graduate_school</string>
    <string name="summary_real_name">real_name</string>
    <string name="summary_small_jie">small_jie</string>
    <string name="summary_small_school">small_school</string>
    <string name="summary_under_graduate_jie">under_graduate_jie</string>
    <string name="summary_under_graduate_school">under_graduate_school</string>
    <string name="summary_work">work</string>
    <string name="summary_work_current">work_current</string>
    <string name="summary_work_ever">work_ever</string>
    <string name="summary_you_er_yuan_jie">you_er_yuan_jie</string>
    <string name="summary_you_er_yuan_school">you_er_yuan_school</string>
    <string name="summary_zhu_zhi">zhu_zhi</string>
    <string name="done">Done</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_registered">Registered</string>
    <string name="title_list">Leaderboard</string>

    <string name="title_detail">Profile</string>
    <string name="cd_home">Home</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>
    <string name="cd_contacts">关系</string>
    <string name="title_contacts">关系</string>
    <string name="my">我的</string>
    <string name="search_cd">六度</string>
    <string name="recommend">短篇</string>
    <string name="contact_group_tongxue">同学</string>
    <string name="contact_group_tongshi">同事</string>
    <string name="contact_group_qinshu">亲属</string>
    <string name="contact_group_pengyou">朋友</string>
    <string name="contact_group_no">未分组</string>
    <string name="td_contact_state">读取状态</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="sys_email">six_degree_whq@163.com</string>
    <string name="process_save_relations">正在保存关系</string>
    <string name="process_save">正在保存</string>
    <string name="in_calculation">计算中</string>
    <string name="in_deletion">删除中</string>

    <string name="in_sending">发送中</string>
    <string name="process_relation_expand">关系扩展中</string>
    <string name="process_in_relation_near">正在计算最近关系</string>

    <string name="in_updating_nickname">昵称更新中</string>
    <string name="in_send_checkcode">验证码发送中</string>
    <string name="send_crash">正在发送错误</string>
    <string name="in_removing">移除中</string>
    <string name="in_sync_contacts">同步通讯录数据</string>
    <string name="fail_update_metadata">发生系统错误，请到应用商店重新下载</string>

    <string name="toast_success">保存成功</string>
    <string name="sending_file">正在发送文件</string>
    <string name="fail_sending">发送失败</string>
    <string name="prompt_rule">林黛玉 启蒙老师 贾雨村\n贾演:备注=也作“贾寅”,手机号=10000000000</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="fav_error">收藏失败</string>
    <string name="read_hlm">读取红楼梦关系示例......</string>
    <string name="nickname_exists">昵称已经存在</string>
    <string name="change_relation">正在提交更改</string>
    <string name="changed_relation_prompt">提交成功,经确认后有效</string>
    <string name="change_relation_error">提交更改失败</string>
    <string name="save_setting">正在保存设置</string>
    <string name="save_success">保存成功</string>
    <string name="read_profile">正在读取画像</string>
    <string name="delete_relation">\"正在删除关系\"</string>
    <string name="private_policy_prompt">请你务必审慎阅读、充分理解<i><b>[隐私政策]</b></i>中相关条款内容。<br/>
        你一旦注册六度，即视为你已了解并完全同意本协议各项内容，包括六度对使用协议随时所做的任何修改。如你不同意本协议及/或随时对其的修改，请你立即停止注册及使用六度所提供的全部服务。</string>
    <string name="private_url">http://sixdegree.ren:8081/private.html</string>
    <string name="contact_title">意见反馈</string>
</resources>
