<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="is_tongxue" type="Boolean"/>
        <variable name="is_tongshi" type="Boolean"/>
        <variable name="is_qinshu" type="Boolean"/>
        <variable name="is_pengyou" type="Boolean"/>
        <variable name="is_none" type="Boolean"/>
        <variable name="contact_name" type="String"/>
        <variable name="is_selected" type="Boolean"/>
        <variable name="can_select" type="Boolean"/>
        <variable name="phone_list" type="String"/>
    </data>
    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        contentPadding="5dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp">
            <ImageView
                android:id="@+id/contact_group_tongxue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/tongxue"
                android:visibility="@{safeUnbox(is_tongxue)}"
                tools:visibility="invisible"
                tools:srcCompat="@drawable/tongxue"
                android:contentDescription="@string/contact_group_tongxue"
                tools:ignore="VectorDrawableCompat" />
            <ImageView
                android:id="@+id/contact_group_tongshi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/contact_group_tongxue"
                app:srcCompat="@drawable/tongshi"
                tools:srcCompat="@drawable/tongshi"
                android:visibility="@{safeUnbox(is_tongshi)}"
                tools:visibility="invisible"
                android:contentDescription="@string/contact_group_tongshi"/>

            <ImageView
                android:id="@+id/contact_group_qinshu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/contact_group_tongshi"
                app:srcCompat="@drawable/qinshu"
                tools:srcCompat="@drawable/qinshu"
                android:visibility="@{safeUnbox(is_qinshu)}"
                tools:visibility="visible"
                android:contentDescription="@string/contact_group_qinshu"/>

            <ImageView
                android:id="@+id/contact_group_pengyou"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/contact_group_qinshu"
                app:srcCompat="@drawable/pengyou"
                tools:srcCompat="@drawable/pengyou"
                android:visibility="@{safeUnbox(is_pengyou)}"
                tools:visibility="invisible"
                android:contentDescription="@string/contact_group_pengyou"/>
            <ImageView
                android:id="@+id/contact_group_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/contact_group_pengyou"
                app:srcCompat="@drawable/group_no"
                tools:srcCompat="@drawable/group_no"
                android:visibility="@{safeUnbox(is_none)}"
                tools:visibility="invisible"
                android:contentDescription="@string/contact_group_no"
                tools:ignore="VectorDrawableCompat" />
            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@{contact_name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/selected"
                tools:text="@tools:sample/full_names"/>
            <TextView
                android:id="@+id/phone_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@{phone_list}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintTop_toBottomOf="@id/contact_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@tools:sample/full_names"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:visibility="@{safeUnbox(can_select)}"
                android:id="@+id/selected"
                android:checked="@{safeUnbox(is_selected)}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
